docs/css/styles.css
:root {
  --color__border: #eee;
  --color__button--background: #fff;
  --color__button--border: #444;
  --color__button--text: #222;
  --color__link--unvisited: #ddd;
  --color__text--dark-bg: #fff;
  --color__text--light-bg: #000;
  --font-family__primary: sans-serif;
  --img__hero: url(../img/Halifax_Sunset_by_Vlad_Drobinin.jpg);
  --img__about-me: url(../img/warty-final-ubuntu.png);
  --img__another-card: url(../img/Definitive_Light_Zen_Orange_by_Pierre_Cante.jpg);
  --img__foundation: url(../img/Raindrops_On_The_Table_by_Alex_Fazit.jpg);
  --img__comprehensive: url(../img/El_Haouaria_by_Nusi_Nusi.jpg);
  --img__portfolio: url(../img/Crocus_Wallpaper_by_Roy_Tanck.jpg);
  --img__something-else: url(../img/Spices_in_Athens_by_Makis_Chourdakis.jpg);
  --line-height__content: 1.7em;
  --margin__main-content: 2.5em;
}

/* Mixins */
/* is-a Card */
/* is-a Card */
/* Placeholders */
#services__something-else, #services__portfolio, #services__comprehensive, #services__foundation, #another-card, #about-me {
  border-style: solid;
  border-width: 1px;
  border-color: var(--color__border);
  box-shadow: 0.1em 0.2em 0.3em 0.1em #ddd;
}

#contact__btn-phone, #contact__btn-email {
  background: var(--color__button--background);
  border-color: var(--color__button--border);
  color: var(--color__button--text);
  border-radius: 50rem;
  border-style: solid;
  border-width: 4px;
  box-shadow: 0.1em 0.2em 0.3em 0.1em #ddd;
  font-size: 1.5rem;
  --margin-horizontal: 3rem;
  --margin-vertical: 0.7rem;
  margin-left: var(--margin-horizontal);
  margin-right: var(--margin-horizontal);
  margin-top: var(--margin-vertical);
  margin-bottom: var(--margin-vertical);
  padding: 0.5em;
}

#services__something-else div, #services__portfolio div, #services__comprehensive div, #services__foundation div, #another-card h2, #about-me h2 {
  background-attachment: fixed;
  background-size: cover;
  background-repeat: no-repeat;
  height: 8rem;
  margin: 0px;
}

#footer a:link, #hero a:link {
  font-family: var(--font-family__primary);
  text-decoration: none;
}
#footer li, #hero li {
  list-style-type: none;
}
#footer li + li, #hero li + li {
  margin-left: 2em;
}

/* Main styles */
body {
  margin: 0px;
}

#hero {
  background-image: var(--img__hero);
  background-size: cover;
  background-attachment: fixed;
  display: flex;
  height: 40em;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 3em;
}
#hero #hero__navbar {
  display: flex;
  flex-direction: row;
  justify-content: center;
}
#hero a {
  color: #000;
}

/* hero */
#about-me {
  margin: var(--margin__main-content);
}
#about-me h2 {
  background-image: var(--img__about-me);
  display: flex;
  justify-content: center;
  align-items: flex-end;
  padding-bottom: 2em;
}
#about-me p {
  line-height: var(--line-height__content);
  margin: 1.5em;
}

#another-card {
  margin: var(--margin__main-content);
}
#another-card h2 {
  background-image: var(--img__another-card);
  display: flex;
  justify-content: center;
  align-items: flex-end;
  padding-bottom: 2em;
}
#another-card p {
  line-height: var(--line-height__content);
  margin: 1.5em;
}

#services {
  margin: var(--margin__main-content);
}
#services h2 {
  text-align: center;
}

#services__foundation {
  margin-bottom: 1.5em;
}
#services__foundation div {
  background-image: var(--img__foundation);
}
#services__foundation h3 {
  text-align: center;
}
#services__foundation ul {
  line-height: var(--line-height__content);
}
#services__foundation li + li {
  margin-top: 1em;
}

#services__comprehensive {
  margin-bottom: 1.5em;
}
#services__comprehensive div {
  background-image: var(--img__comprehensive);
}
#services__comprehensive h3 {
  text-align: center;
}
#services__comprehensive ul {
  line-height: var(--line-height__content);
}
#services__comprehensive li + li {
  margin-top: 1em;
}

#services__portfolio {
  margin-bottom: 1.5em;
}
#services__portfolio div {
  background-image: var(--img__portfolio);
}
#services__portfolio h3 {
  text-align: center;
}
#services__portfolio ul {
  line-height: var(--line-height__content);
}
#services__portfolio li + li {
  margin-top: 1em;
}

#services__something-else {
  margin-bottom: 1.5em;
}
#services__something-else div {
  background-image: var(--img__something-else);
}
#services__something-else h3 {
  text-align: center;
}
#services__something-else ul {
  line-height: var(--line-height__content);
}
#services__something-else li + li {
  margin-top: 1em;
}

#contact {
  display: flex;
  flex-direction: column;
  margin: var(--margin__main-content);
}
#contact h2 {
  text-align: center;
}
#contact p {
  line-height: var(--line-height__content);
}

#footer {
  background: #333;
  padding-top: 3rem;
  padding-bottom: 2rem;
}

#footer__navbar {
  display: flex;
  flex-direction: row;
  justify-content: center;
}
#footer__navbar a {
  color: #fff;
}

/*# sourceMappingURL=styles.css.map */

